[gd_scene load_steps=40 format=2]

[ext_resource path="res://Imatges/Menu/Background_menu1.png" type="Texture" id=1]
[ext_resource path="res://Escenes/Menu.gd" type="Script" id=2]
[ext_resource path="res://Imatges/Menu/Configuracio3.png" type="Texture" id=3]
[ext_resource path="res://Imatges/Menu/Configuracio2.png" type="Texture" id=4]
[ext_resource path="res://Imatges/Menu/Configuracio1.png" type="Texture" id=5]
[ext_resource path="res://Imatges/Menu/Play_button1.png" type="Texture" id=6]
[ext_resource path="res://Imatges/Menu/Play_button2.png" type="Texture" id=7]
[ext_resource path="res://Imatges/Menu/Play_button3.png" type="Texture" id=8]
[ext_resource path="res://Imatges/Menu/Play_button4.png" type="Texture" id=9]
[ext_resource path="res://Imatges/Menu/Play_button5.png" type="Texture" id=10]
[ext_resource path="res://Imatges/Menu/Juga_boto1.png" type="Texture" id=11]
[ext_resource path="res://Imatges/Menu/Juga_boto2.png" type="Texture" id=12]
[ext_resource path="res://Imatges/Menu/Juga_boto4.png" type="Texture" id=13]
[ext_resource path="res://Imatges/Menu/Juga_boto5.png" type="Texture" id=14]
[ext_resource path="res://Imatges/Menu/Juga_boto3.png" type="Texture" id=15]
[ext_resource path="res://Imatges/Menu/Quit_button3.png" type="Texture" id=16]
[ext_resource path="res://Imatges/Menu/Quit_button4.png" type="Texture" id=17]
[ext_resource path="res://Imatges/Menu/Quit_button1.png" type="Texture" id=18]
[ext_resource path="res://Imatges/Menu/Quit_button2.png" type="Texture" id=19]
[ext_resource path="res://Imatges/Menu/Quit_button5.png" type="Texture" id=20]
[ext_resource path="res://Global/Global.gd" type="Script" id=21]
[ext_resource path="res://fonts/Game_font.tres" type="DynamicFont" id=22]
[ext_resource path="res://Escenes/software_cursor.tscn" type="PackedScene" id=23]
[ext_resource path="res://Imatges/Menu/Surt_button2.png" type="Texture" id=24]
[ext_resource path="res://Imatges/Menu/Surt_button1.png" type="Texture" id=25]
[ext_resource path="res://Imatges/Menu/Surt_button3.png" type="Texture" id=26]
[ext_resource path="res://Imatges/Menu/Surt_button5.png" type="Texture" id=27]
[ext_resource path="res://Imatges/Menu/Surt_button4.png" type="Texture" id=28]
[ext_resource path="res://Imatges/Menu/Birds1.png" type="Texture" id=29]
[ext_resource path="res://Imatges/Menu/Birds2.png" type="Texture" id=30]
[ext_resource path="res://Imatges/Menu/Birds3.png" type="Texture" id=31]
[ext_resource path="res://Imatges/Menu/Birds4.png" type="Texture" id=32]
[ext_resource path="res://Imatges/Menu/Birds5.png" type="Texture" id=33]
[ext_resource path="res://Imatges/Tilemap/Tree_1.png" type="Texture" id=34]
[ext_resource path="res://Imatges/Tilemap/Cloud.png" type="Texture" id=35]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ) ],
"loop": true,
"name": "Birds",
"speed": 3.0
}, {
"frames": [  ],
"loop": true,
"name": "Res",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "select",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "confirm",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "select",
"speed": 7.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "confirm_cat",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "idle_cat",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "confirm",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 15 ), ExtResource( 13 ) ],
"loop": true,
"name": "select_cat",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [  ],
"loop": true,
"name": "",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "select",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 28 ), ExtResource( 27 ) ],
"loop": true,
"name": "confirm_cat",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "idle_cat",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 20 ) ],
"loop": true,
"name": "confirm",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ) ],
"loop": true,
"name": "select_cat",
"speed": 5.0
} ]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_left = 512.0
margin_top = 300.0
margin_right = 512.0
margin_bottom = 300.0

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -301.0
margin_right = 512.0
margin_bottom = 304.0
rect_scale = Vector2( 0.752389, 0.751457 )
texture = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0

[node name="Node2D" type="Node2D" parent="."]

[node name="Coluds" type="Node2D" parent="Node2D"]
position = Vector2( 0, -7.62939e-06 )
scale = Vector2( 0.683962, 0.736721 )

[node name="Sprite" type="Sprite" parent="Node2D/Coluds"]
position = Vector2( 436, 45 )
texture = ExtResource( 35 )

[node name="Sprite3" type="Sprite" parent="Node2D/Coluds"]
position = Vector2( 44, -8.99999 )
texture = ExtResource( 35 )

[node name="Sprite2" type="Sprite" parent="Node2D/Coluds"]
position = Vector2( 44, 235 )
scale = Vector2( 1.26541, 0.324253 )
texture = ExtResource( 35 )

[node name="Birds" type="AnimatedSprite" parent="Node2D"]
position = Vector2( 189, 76 )
scale = Vector2( 2.07985, 0.816606 )
frames = SubResource( 4 )
animation = "Birds"
frame = 3
playing = true

[node name="Timer_birds" type="Timer" parent="Node2D"]
wait_time = 10.0
one_shot = true

[node name="Part Mitja" type="Node2D" parent="Node2D"]
modulate = Color( 0.670588, 0.713726, 0.682353, 1 )
position = Vector2( -102, 2.38419e-07 )
scale = Vector2( 0.860369, 0.739887 )

[node name="Tree" type="Sprite" parent="Node2D/Part Mitja"]
position = Vector2( 997, -13 )
scale = Vector2( 0.425198, 0.366848 )
texture = ExtResource( 34 )

[node name="Tree2" type="Sprite" parent="Node2D/Part Mitja"]
position = Vector2( 962, -10 )
scale = Vector2( 0.425198, 0.366848 )
texture = ExtResource( 34 )

[node name="Tree3" type="Sprite" parent="Node2D/Part Mitja"]
position = Vector2( 940, 22 )
scale = Vector2( 0.425198, 0.366848 )
texture = ExtResource( 34 )

[node name="Tree4" type="Sprite" parent="Node2D/Part Mitja"]
position = Vector2( 902, 20 )
scale = Vector2( 0.425198, 0.366848 )
texture = ExtResource( 34 )

[node name="Tree5" type="Sprite" parent="Node2D/Part Mitja"]
position = Vector2( 758, 29 )
scale = Vector2( 0.425198, 0.366848 )
texture = ExtResource( 34 )

[node name="Tree6" type="Sprite" parent="Node2D/Part Mitja"]
position = Vector2( 803, 46 )
scale = Vector2( 0.425198, 0.366848 )
texture = ExtResource( 34 )

[node name="Tree7" type="Sprite" parent="Node2D/Part Mitja"]
position = Vector2( 845, 31 )
scale = Vector2( 0.425198, 0.366848 )
texture = ExtResource( 34 )

[node name="Tree8" type="Sprite" parent="Node2D/Part Mitja"]
position = Vector2( 1013, 94 )
scale = Vector2( 0.425198, 0.366848 )
texture = ExtResource( 34 )

[node name="Tree9" type="Sprite" parent="Node2D/Part Mitja"]
position = Vector2( 994, 134 )
scale = Vector2( 0.425198, 0.366848 )
texture = ExtResource( 34 )

[node name="Tree10" type="Sprite" parent="Node2D/Part Mitja"]
position = Vector2( 953, 119 )
scale = Vector2( 0.425198, 0.366848 )
texture = ExtResource( 34 )

[node name="Tree11" type="Sprite" parent="Node2D/Part Mitja"]
position = Vector2( 915, 140 )
scale = Vector2( 0.425198, 0.366848 )
texture = ExtResource( 34 )

[node name="Tree12" type="Sprite" parent="Node2D/Part Mitja"]
position = Vector2( 864, 132 )
scale = Vector2( 0.425198, 0.366848 )
texture = ExtResource( 34 )

[node name="Part superior" type="Node2D" parent="Node2D"]
modulate = Color( 0.737869, 0.777344, 0.746813, 1 )
position = Vector2( 28, 9 )
scale = Vector2( 0.69452, 0.749555 )

[node name="Tree" type="Sprite" parent="Node2D/Part superior"]
position = Vector2( 992, 192 )
texture = ExtResource( 34 )

[node name="Tree2" type="Sprite" parent="Node2D/Part superior"]
position = Vector2( 984, 252 )
texture = ExtResource( 34 )

[node name="Tree3" type="Sprite" parent="Node2D/Part superior"]
position = Vector2( 944, 348 )
texture = ExtResource( 34 )

[node name="Tree4" type="Sprite" parent="Node2D/Part superior"]
position = Vector2( 919, 188 )
texture = ExtResource( 34 )

[node name="Tree5" type="Sprite" parent="Node2D/Part superior"]
position = Vector2( 882, 250 )
texture = ExtResource( 34 )

[node name="Tree6" type="Sprite" parent="Node2D/Part superior"]
position = Vector2( 819, 294 )
texture = ExtResource( 34 )

[node name="Tree7" type="Sprite" parent="Node2D/Part superior"]
position = Vector2( 864, 376 )
texture = ExtResource( 34 )

[node name="Tree8" type="Sprite" parent="Node2D/Part superior"]
position = Vector2( 756, 217 )
texture = ExtResource( 34 )

[node name="Tree9" type="Sprite" parent="Node2D/Part superior"]
position = Vector2( 692, 281 )
texture = ExtResource( 34 )

[node name="Tree10" type="Sprite" parent="Node2D/Part superior"]
position = Vector2( 750, 373 )
texture = ExtResource( 34 )

[node name="Part inferior" type="Node2D" parent="Node2D"]
position = Vector2( 12, 53 )
scale = Vector2( 0.694563, 0.642145 )

[node name="Tree" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 389, 298 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree2" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 375, 325 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree3" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 403, 337 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree4" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 421, 365 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree5" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 390, 373 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree6" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 359, 352 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree7" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 367, 392 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree8" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 393, 410 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree9" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 348, 297 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree10" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 312.48, 335.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree11" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 298.479, 362.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree12" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 326.48, 374.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree13" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 344.479, 402.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree14" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 313.479, 410.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree15" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 282.479, 389.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree16" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 290.479, 429.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree17" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 316.48, 447.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree18" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 271.479, 334.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree19" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 226.48, 301.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree20" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 212.479, 328.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree21" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 240.48, 340.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree22" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 258.479, 368.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree23" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 227.479, 376.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree24" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 196.479, 355.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree25" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 204.479, 395.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree26" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 230.48, 413.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree27" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 185.479, 300.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree28" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 143.48, 344.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree29" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 129.479, 371.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree30" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 157.48, 383.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree31" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 175.479, 411.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree32" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 144.479, 419.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree33" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 113.479, 398.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree34" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 121.479, 438.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree35" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 147.48, 456.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree36" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 102.479, 343.401 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree37" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 22, 405 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree38" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 67, 434 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree39" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 72, 376 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree40" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 295, 286 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree41" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 205, 470 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Tree42" type="Sprite" parent="Node2D/Part inferior"]
position = Vector2( 250, 459 )
scale = Vector2( 0.374795, 0.35521 )
texture = ExtResource( 34 )

[node name="Configuracio" type="TextureButton" parent="."]
margin_left = 71.0
margin_top = 372.0
margin_right = 101.0
margin_bottom = 377.0
rect_scale = Vector2( -1.60267, 9.82133 )

[node name="Timer" type="Timer" parent="Configuracio"]
wait_time = 0.5

[node name="AnimatedSprite" type="AnimatedSprite" parent="Configuracio"]
position = Vector2( 14.5345, 2.67528 )
rotation = 3.14159
scale = Vector2( 0.274236, -0.0569208 )
frames = SubResource( 1 )
animation = "idle"

[node name="Label" type="Label" parent="Configuracio"]
visible = false
margin_left = 33.1825
margin_top = -5.00903
margin_right = 121.182
margin_bottom = 20.991
rect_scale = Vector2( -0.737992, 0.132735 )
custom_fonts/font = ExtResource( 22 )
text = "Options"

[node name="Play" type="TextureButton" parent="."]
margin_left = 346.0
margin_top = 182.0
margin_right = 464.0
margin_bottom = 251.0
rect_scale = Vector2( 0.98602, 0.917777 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Play"]
position = Vector2( 47.1249, 46.6655 )
scale = Vector2( 1.00867, 1.03425 )
frames = SubResource( 2 )
animation = "idle"

[node name="TimerPlay" type="Timer" parent="Play"]

[node name="Quit" type="TextureButton" parent="."]
margin_left = 641.0
margin_top = 372.0
margin_right = 681.0
margin_bottom = 412.0
rect_scale = Vector2( 2.61899, 1.0201 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Quit"]
position = Vector2( 19.0946, 31.3821 )
scale = Vector2( 0.50249, 1.36444 )
frames = SubResource( 3 )
animation = "select"
playing = true
script = ExtResource( 21 )

[node name="software_cursor" parent="." instance=ExtResource( 23 )]

[connection signal="animation_finished" from="Node2D/Birds" to="." method="_on_Birds_animation_finished"]
[connection signal="timeout" from="Node2D/Timer_birds" to="." method="_on_Timer_birds_timeout"]
[connection signal="mouse_entered" from="Configuracio" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="Configuracio" to="." method="_on_Configuracio_mouse_exited"]
[connection signal="pressed" from="Configuracio" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="Configuracio/Timer" to="." method="_on_Timer_timeout"]
[connection signal="mouse_entered" from="Play" to="." method="_on_Play_mouse_entered"]
[connection signal="mouse_exited" from="Play" to="." method="_on_Play_mouse_exited"]
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="timeout" from="Play/TimerPlay" to="." method="_on_TimerPlay_timeout"]
[connection signal="mouse_entered" from="Quit" to="." method="_on_Quit_mouse_entered"]
[connection signal="mouse_exited" from="Quit" to="." method="_on_Quit_mouse_exited"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="animation_finished" from="Quit/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
